@@ -115,6 +115,10 @@ New in 1.11.0a:
     action is now a synonym for "r" (replace).  Also, the script has been
     ignoring the "v" (verbose) modifier already since Automake 1.11.3.
 
+  - When the 'compile' script is used to wrap MSVC, it now accepts an
+    optional space between the -I, -L and -l options and their respective
+    arguments, for better POSIX compliance.
+
 Bugs fixed in 1.11.0a:
 
 * Bugs introduced by 1.11.2:
